Modified Training and Evaluation.

--- a/Notebooks/3_Training_Evaluation_Data_Aug.ipynb
+++ b/Notebooks/3_Training_Evaluation_Data_Aug.ipynb
@@ -4276,10 +4276,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame(gs.cv_results_)[[\"param_regr__alpha\",\"param_regr__degree\",\"mean_test_score\"]]\n",
-    "results_0_1 = results[results[\"param_regr__alpha\"] == 0.1]\n",
-    "results_1 = results[results[\"param_regr__alpha\"] == 1]\n",
-    "results_10 = results[results[\"param_regr__alpha\"] == 10]"
+    "results = pd.DataFrame(gs.cv_results_)[[\n",
+    "    \"param_regr__alpha\",\n",
+    "    \"param_regr__degree\",\n",
+    "    \"mean_test_score\"\n",
+    "]]\n",
+    "splits = sorted(results[\"param_regr__alpha\"].unique())"
    ]
   },
   {
@@ -4299,13 +4301,19 @@
     }
    ],
    "source": [
-    "plt.plot(results_0_1[\"param_regr__degree\"], results_0_1[\"mean_test_score\"])\n",
-    "plt.plot(results_1[\"param_regr__degree\"], results_1[\"mean_test_score\"], c=\"red\")\n",
-    "plt.plot(results_10[\"param_regr__degree\"], results_10[\"mean_test_score\"], c=\"green\")\n",
+    "for split in splits:\n",
+    "    subset = results[results[\"param_regr__alpha\"] == split]\n",
+    "    subset = subset.sort_values(\"param_regr__degree\")\n",
+    "    plt.plot(\n",
+    "        subset[\"param_regr__degree\"],\n",
+    "        subset[\"mean_test_score\"],\n",
+    "        label=f\"param_regr__alpha={split}\"\n",
+    "    )\n",
+    "\n",
     "plt.xlabel('degree')\n",
     "plt.ylabel('score')\n",
-    "plt.legend([\"alpha=0.1\",\"alpha=1\",\"alpha=10\"])\n",
-    "plt.title('Grafico al variare del grado della funzione kernel polinomiale')\n",
+    "plt.title(\"Performance al variare del grado della funzione\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -5671,7 +5679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
