Added Indpendent Country Training and Evaluation.

--- a/Notebooks/3_Training_Evaluation_Data_Aug_Mixed.ipynb
+++ b/Notebooks/3_Training_Evaluation_Data_Aug_Mixed.ipynb
@@ -6,7 +6,7 @@
     "id": "mvVxxvpq2pGF"
    },
    "source": [
-    "# Previsione della Qualità dell'Aria - **Allenamento con Dati Augmentati e Valutazione dei Modelli**"
+    "# Previsione della Qualità dell'Aria - **Allenamento con Dati Augmentati e Valutazione dei Modelli Misto**"
    ]
   },
   {
