--- a/Notebooks/2_Training_Evaluation_Mixed.ipynb
+++ b/Notebooks/2_Training_Evaluation_Mixed.ipynb
@@ -6,7 +6,7 @@
     "id": "mvVxxvpq2pGF"
    },
    "source": [
-    "# Previsione della Qualità dell'Aria - **Allenamento e Valutazione dei Modelli**"
+    "# Previsione della Qualità dell'Aria - **Allenamento e Valutazione dei Modelli Misto**"
    ]
   },
   {
