--- a/Notebooks/Regression/4_Training_Evaluation_Cina.ipynb
+++ b/Notebooks/Regression/4_Training_Evaluation_Cina.ipynb
@@ -537,7 +537,7 @@
     "                 low_memory=False)\n",
     "obj_cols = df.select_dtypes(include=\"object\").columns\n",
     "for col in obj_cols:\n",
-    "    df[col] = df[col].astype(\"string\")\n",
+    "    df[col] = df[col].astype(\"category\")\n",
     "df.drop('date', axis=1, inplace=True)\n",
     "df = df[(df['year'] >= 2019) & (df['year'] <= 2022)]\n",
     "df = df.reset_index(drop=True)\n",
