--- a/Notebooks/Regression/6_Training_Evaluation_India.ipynb
+++ b/Notebooks/Regression/6_Training_Evaluation_India.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('original_india_dataset.csv',\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/vMxster/Data_Project/main/Datasets/original_india_dataset.csv',\n",
     "                 sep=',',\n",
     "                 quotechar='\"',\n",
     "                 dtype=None,\n",
@@ -326,7 +326,7 @@
     "                 low_memory=False)\n",
     "obj_cols = df.select_dtypes(include=\"object\").columns\n",
     "for col in obj_cols:\n",
-    "    df[col] = df[col].astype(\"string\")\n",
+    "    df[col] = df[col].astype(\"category\")\n",
     "df.drop('date', axis=1, inplace=True)\n",
     "df = df[(df['year'] >= 2019) & (df['year'] <= 2022)]\n",
     "df = df.reset_index(drop=True)\n",
