--- a/Notebooks/Regression/7_Training_Evaluation_Data_Aug_India.ipynb
+++ b/Notebooks/Regression/7_Training_Evaluation_Data_Aug_India.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -344,7 +344,7 @@
     "\n",
     "obj_cols = df.select_dtypes(include=\"object\").columns\n",
     "for col in obj_cols:\n",
-    "    df[col] = df[col].astype(\"string\")\n",
+    "    df[col] = df[col].astype(\"category\")\n",
     "df = df[(df['year'] >= 2020) & (df['year'] <= 2022)]\n",
     "df = df.reset_index(drop=True)\n",
     "df.head()"
