Updated and checked

--- a/Notebooks/Classification/4_Training_Evaluation_Cina.ipynb
+++ b/Notebooks/Classification/4_Training_Evaluation_Cina.ipynb
@@ -505,15 +505,39 @@
     "- `pm_lag_1W`: PM2.5 ritardato di 1 settimana\n",
     "- `pm_lag_1M`: PM2.5 ritardato di 1 mese\n",
     "- `pm_lag_1Y`: PM2.5 ritardato di 1 anno\n",
-    "- `pm_lag_2Y`: PM2.5 ritardato di 2 anni\n",
+    "- `pm_lag_1D`: PM2.5 ritardato di 1 giorno\n",
+    "- `pm_lag_2D`: PM2.5 ritardato di 2 giorni\n",
+    "- `pm_lag_3D`: PM2.5 ritardato di 3 giorni\n",
     "- `co_lag_1W`: CO ritardato di 1 settimana\n",
     "- `co_lag_1M`: CO ritardato di 1 mese\n",
     "- `co_lag_1Y`: CO ritardato di 1 anno\n",
-    "- `co_lag_2Y`: CO ritardato di 2 anni\n",
+    "- `co_lag_1D`: CO ritardato di 1 giorno\n",
+    "- `co_lag_2D`: CO ritardato di 2 giorni\n",
+    "- `co_lag_3D`: CO ritardato di 1 anno\n",
     "- `o3_lag_1W`: O3 ritardato di 1 settimana\n",
     "- `o3_lag_1M`: O3 ritardato di 1 mese\n",
     "- `o3_lag_1Y`: O3 ritardato di 1 anno\n",
-    "- `o3_lag_2Y`: O3 ritardato di 2 anni"
+    "- `o3_lag_1D`: O3 ritardato di 1 giorno\n",
+    "- `o3_lag_2D`: O3 ritardato di 2 giorni\n",
+    "- `o3_lag_3D`: O3 ritardato di 3 giorni\n",
+    "- `so2_lag_1W`: SO2 ritardato di 1 settimana\n",
+    "- `so2_lag_1M`: SO2 ritardato di 1 mese\n",
+    "- `so2_lag_1Y`: SO2 ritardato di 1 anno\n",
+    "- `so2_lag_1D`: SO2 ritardato di 1 giorno\n",
+    "- `so2_lag_2D`: SO2 ritardato di 2 giorni\n",
+    "- `so2_lag_3D`: SO2 ritardato di 3 giorni\n",
+    "- `no2_lag_1W`: NO2 ritardato di 1 settimana\n",
+    "- `no2_lag_1M`: NO2 ritardato di 1 mese\n",
+    "- `no2_lag_1Y`: NO2 ritardato di 1 anno\n",
+    "- `no2_lag_1D`: NO2 ritardato di 1 giorno\n",
+    "- `no2_lag_2D`: NO2 ritardato di 2 giorni\n",
+    "- `no2_lag_3D`: NO2 ritardato di 3 giorni\n",
+    "- `pm10_lag_1W`: PM10 ritardato di 1 settimana\n",
+    "- `pm10_lag_1M`: PM10 ritardato di 1 mese\n",
+    "- `pm10_lag_1Y`: PM10 ritardato di 1 anno\n",
+    "- `pm10_lag_1D`: PM10 ritardato di 1 giorno\n",
+    "- `pm10_lag_2D`: PM10 ritardato di 2 giorni\n",
+    "- `pm10_lag_3D`: PM10 ritardato di 3 giorni\n"
    ]
   },
   {
