--- a/Notebooks/Classification/6_Training_Evaluation_India.ipynb
+++ b/Notebooks/Classification/6_Training_Evaluation_India.ipynb
@@ -473,15 +473,21 @@
     "- `pm_lag_1W`: PM2.5 ritardato di 1 settimana\n",
     "- `pm_lag_1M`: PM2.5 ritardato di 1 mese\n",
     "- `pm_lag_1Y`: PM2.5 ritardato di 1 anno\n",
-    "- `pm_lag_2Y`: PM2.5 ritardato di 2 anni\n",
+    "- `pm_lag_1D`: PM2.5 ritardato di 1 giorno\n",
+    "- `pm_lag_2D`: PM2.5 ritardato di 2 giorni\n",
+    "- `pm_lag_3D`: PM2.5 ritardato di 3 giorni\n",
     "- `co_lag_1W`: CO ritardato di 1 settimana\n",
     "- `co_lag_1M`: CO ritardato di 1 mese\n",
     "- `co_lag_1Y`: CO ritardato di 1 anno\n",
-    "- `co_lag_2Y`: CO ritardato di 2 anni\n",
+    "- `co_lag_1D`: CO ritardato di 1 giorno\n",
+    "- `co_lag_2D`: CO ritardato di 2 giorni\n",
+    "- `co_lag_3D`: CO ritardato di 1 anno\n",
     "- `o3_lag_1W`: O3 ritardato di 1 settimana\n",
     "- `o3_lag_1M`: O3 ritardato di 1 mese\n",
     "- `o3_lag_1Y`: O3 ritardato di 1 anno\n",
-    "- `o3_lag_2Y`: O3 ritardato di 2 anni"
+    "- `o3_lag_1D`: O3 ritardato di 1 giorno\n",
+    "- `o3_lag_2D`: O3 ritardato di 2 giorni\n",
+    "- `o3_lag_3D`: O3 ritardato di 3 giorni"
    ]
   },
   {
