--- a/Notebooks/Regression/7_Training_Evaluation_Data_Aug_India.ipynb
+++ b/Notebooks/Regression/7_Training_Evaluation_Data_Aug_India.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -344,7 +344,7 @@
     "\n",
     "obj_cols = df.select_dtypes(include=\"object\").columns\n",
     "for col in obj_cols:\n",
-    "    df[col] = df[col].astype(\"category\")\n",
+    "    df[col] = df[col].astype(\"string\")\n",
     "df = df[(df['year'] >= 2020) & (df['year'] <= 2022)]\n",
     "df = df.reset_index(drop=True)\n",
     "df.head()"
@@ -423,15 +423,21 @@
     "- `pm_lag_1W`: PM2.5 ritardato di 1 settimana\n",
     "- `pm_lag_1M`: PM2.5 ritardato di 1 mese\n",
     "- `pm_lag_1Y`: PM2.5 ritardato di 1 anno\n",
-    "- `pm_lag_2Y`: PM2.5 ritardato di 2 anni\n",
+    "- `pm_lag_1D`: PM2.5 ritardato di 1 giorno\n",
+    "- `pm_lag_2D`: PM2.5 ritardato di 2 giorni\n",
+    "- `pm_lag_3D`: PM2.5 ritardato di 3 giorni\n",
     "- `co_lag_1W`: CO ritardato di 1 settimana\n",
     "- `co_lag_1M`: CO ritardato di 1 mese\n",
     "- `co_lag_1Y`: CO ritardato di 1 anno\n",
-    "- `co_lag_2Y`: CO ritardato di 2 anni\n",
+    "- `co_lag_1D`: CO ritardato di 1 giorno\n",
+    "- `co_lag_2D`: CO ritardato di 2 giorni\n",
+    "- `co_lag_3D`: CO ritardato di 1 anno\n",
     "- `o3_lag_1W`: O3 ritardato di 1 settimana\n",
     "- `o3_lag_1M`: O3 ritardato di 1 mese\n",
     "- `o3_lag_1Y`: O3 ritardato di 1 anno\n",
-    "- `o3_lag_2Y`: O3 ritardato di 2 anni"
+    "- `o3_lag_1D`: O3 ritardato di 1 giorno\n",
+    "- `o3_lag_2D`: O3 ritardato di 2 giorni\n",
+    "- `o3_lag_3D`: O3 ritardato di 3 giorni"
    ]
   },
   {
@@ -5679,7 +5685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
