--- a/Notebooks/Classification/3_Training_Evaluation_Cina.ipynb
+++ b/Notebooks/Classification/3_Training_Evaluation_Cina.ipynb
@@ -557,7 +557,18 @@
     "id": "KwC-dywTlViq"
    },
    "source": [
-    "La variabile dipendente target dell'addestramento è `PM2.5`, che indica la concentrazione di particelle inquinanti nell'aria con un diametro inferiore a 2,5 micron (μm)."
+    "La variabile target per il nostro modello di addestramento sarà una variabile **discreta**, composta da 6 valori distinti. Questi valori rappresentano i diversi livelli di qualità dell'aria, come definiti dalla scala dell'**Environmental Protection Agency (EPA)** degli Stati Uniti per la concentrazione di PM2.5.\n",
+    "\n",
+    "Possiamo mappare numericamente questi livelli alle seguenti classi, mantenendo l'ordine implicito di gravità:\n",
+    "\n",
+    "* **1: \"Good\"** (Concentrazione di PM2.5: $0 - 9.0 \\mu g/m^3$)\n",
+    "* **2: \"Moderate\"** (Concentrazione di PM2.5: $9.1 - 35.4 \\mu g/m^3$)\n",
+    "* **3: \"Unhealthy for Sensitive Groups\"** (Concentrazione di PM2.5: $35.5 - 55.4 \\mu g/m^3$)\n",
+    "* **4: \"Unhealthy\"** (Concentrazione di PM2.5: $55.5 - 125.4 \\mu g/m^3$)\n",
+    "* **5: \"Very Unhealthy\"** (Concentrazione di PM2.5: $125.5 - 225.4 \\mu g/m^3$)\n",
+    "* **6: \"Hazardous\"** (Concentrazione di PM2.5: $> 225.5 \\mu g/m^3$)\n",
+    "\n",
+    "Adottando questo schema, il problema si configura come un task di **classificazione multi-classe**. L'obiettivo del modello sarà prevedere a quale di questi 6 livelli di qualità dell'aria (o \"categorie di rischio\") appartiene una data osservazione, basandosi sulle caratteristiche di input fornite."
    ]
   },
   {
